# macspu-accel

./: .gitignore  Makefile  README.md  pyproject.toml
src/macspu_accel/: __init__.py  lowlevel.py  provider.py
