[project]
name = "macspu-accel"
version = "0.1.0"
description = "Private macOS SPU accelerometer access via AppleSPUHIDDevice"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "TiltBall Maintainers" }]
keywords = ["macos", "accelerometer", "spu", "hid", "apple"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries"
]

[project.optional-dependencies]
dev = ["build>=1.2.0", "twine>=5.1.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
